--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Phone input</title>
+    <title>InputValidation</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -56,8 +56,8 @@
 </head>
 <body>
     <div class="placeholder"></div>
-    <input type="text" data-tel-input placeholder="Номер авто" maxlength="9" />
-    <button id="btn" >Отправить</button>
+    <input type="text" data-tel-input placeholder="Номер авто" maxlength="10" />
+    <button id="btn" disabled >Отправить</button>
     <div class="placeholder"></div>
 </body>
 </html>
